--- a/public/index.html
+++ b/public/index.html
@@ -5,56 +5,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="/css/index.css">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>FriendsBook</title>
 </head>
 
 <body>
-
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container">
-            <a class="navbar-brand" href="#">FriendsBook</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <ul class="navbar-nav ml-auto">
-                    <li><a class="nav-item nav-link active" href="#">Home</a></li>
-                    <li><a class="nav-item nav-link" href="#">Feature</a></li>
-                    <li><a class="nav-item nav-link" href="#">Pricing</a></li>
-                    <li><a class="nav-item nav-link" href="#">Pages</a></li>
-                    <li><a class="nav-item nav-link user_btn" href="#">Login</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
     <!-- header -->
-    <div class="jumbotron jumbotron-fluid vertical-center">
-        <div class="container">
-            <div class="c_shrink">
-                <div class="row">
-                    <div class="col-lg-6 m-auto">
-                        <h2>Best Social App</h2>
-                        <p class="lead">Lorem ipsum dolor sit, amet consectetur<br>adipisicing elit Magnam sunt.</p>
-                        <!-- <a class="nav-item nav-link d-inline user_btn" href="#">Sign Up</a> -->
-                        <a class="nav-item nav-link d-inline user_btn" href="#">Register</a>
-                    </div>
-                    <div class="col-lg-6">
-                        <img id="bannerImage" src="/images/one.png" alt="Banner Image">
+    <div class="header">
+        <!-- navbar -->
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">FriendsBook</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <ul class="navbar-nav ml-auto">
+                        <li><a class="nav-item nav-link active" href="#">Home</a></li>
+                        <li><a class="nav-item nav-link" href="#">Feature</a></li>
+                        <li><a class="nav-item nav-link" href="#">Pricing</a></li>
+                        <li><a class="nav-item nav-link" href="#">Pages</a></li>
+                        <li><a class="nav-item nav-link user_btn" href="#">Login</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- joumbotron -->
+        <div class="jumbotron jumbotron-fluid vertical-center">
+            <div class="container">
+                <div class="c_shrink">
+                    <div class="row text-align-sm-center">
+                        <div class="col-lg-6 col-md-6 m-auto">
+                            <h2>Best Social App</h2>
+                            <p class="lead">Meet, Talk, Chat with your all friends here.</p>
+                            <!-- <a class="nav-item nav-link d-inline user_btn" href="#">Sign Up</a> -->
+                            <a class="nav-item nav-link user_btn w-50" href="#">Register</a>
+                        </div>
+                        <div class="col-lg-6 col-md-6 img_container">
+                            <img id="bannerImage" src="/images/one.png" alt="Banner Image">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="shapes">
+            <!-- shapes -->
+            <div class="shape shape_left"></div>
+            <div class="shape shape_right"></div>
+        </div>
     </div>
 
+    <div class="section">
+        
+    </div>
 
     <!-- scripts bootsrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
