--- a/public/index.html
+++ b/public/index.html
@@ -40,14 +40,20 @@
         <div class="jumbotron jumbotron-fluid vertical-center">
             <div class="container">
                 <div class="c_shrink">
-                    <div class="row text-align-sm-center">
-                        <div class="col-lg-6 col-md-6 m-auto">
-                            <h2>Best Social App</h2>
-                            <p class="lead">Meet, Talk, Chat with your all friends here.</p>
-                            <!-- <a class="nav-item nav-link d-inline user_btn" href="#">Sign Up</a> -->
-                            <a class="nav-item nav-link user_btn w-50" href="#">Register</a>
+                    <div class="row text-md-left text-sm-center">
+                        <div class="xs-set">
+                            <h2 class="d-md-none d-sm-block middle-xs text-center mr-5">Best Social App</h2>
+                            <div class="col-lg-6 col-md-6 img_container d-md-none d-sm-block mb-5">
+                                <img id="bannerImage" src="/images/one.png" alt="Banner Image">
+                            </div>
                         </div>
-                        <div class="col-lg-6 col-md-6 img_container">
+                        <div class="col-lg-6 col-md-6 m-auto">
+                            <h2 class="d-md-block d-sm-none hide-xs">Best Social App</h2>
+                            <p class="lead d-md-block d-sm-none hide-xs">Meet, Talk, Chat with your all friends here.</p>
+                            <!-- <a class="nav-item nav-link d-inline user_btn" href="#">Sign Up</a> -->
+                            <a class="nav-item nav-link user_btn w-50 middle-xs" href="#">Register</a>
+                        </div>
+                        <div class="col-lg-6 col-md-6 img_container d-md-block d-sm-none hide-xs">
                             <img id="bannerImage" src="/images/one.png" alt="Banner Image">
                         </div>
                     </div>
@@ -62,7 +68,7 @@
     </div>
 
     <div class="section">
-        
+
     </div>
 
     <!-- scripts bootsrap -->
@@ -72,6 +78,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
