added about section

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="c_shrink">
                     <div class="row text-md-left text-sm-center">
-                        <div class="xs-set">
+                        <div>
                             <h2 class="d-md-none d-sm-block middle-xs text-center mr-5">Best Social App</h2>
                             <div class="col-lg-6 col-md-6 img_container d-md-none d-sm-block mb-5">
                                 <img id="bannerImage" src="/images/one.png" alt="Banner Image">
@@ -67,8 +67,30 @@
         </div>
     </div>
 
-    <div class="section">
-
+    <div class="about_app">
+        <div class="container">
+            <div class="about">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img class="about-img" src="/images/two.png" alt="fast message">
+                    </div>
+                    <div class="col-md-6 m-auto about_text">
+                        <h3>Easy Messaging</h3>
+                        <p>Created and design by the exprets to make your user expreience much better. use our message
+                            app to commincate with others without wories. we are here to make UI better.</p>
+                    </div>
+                </div>
+                <div class="row pt-5">
+                    <div class="col-md-6 m-auto about_text">
+                        <h3>Fast Loading</h3>
+                        <p>Feel the Lightning speed. Message worldwide with the highest speed protocol. we know the value of time and thats why users dont need to wait for anything.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <img class="about-img" src="/images/three.png" alt="fast message">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- scripts bootsrap -->
