--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- header -->
-    <div class="header">
+    <section class="header">
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
@@ -73,12 +73,12 @@
             <div class="shape shape_left"></div>
             <div class="shape shape_right"></div>
         </div>
-    </div>
+    </section>
 
     <!-- About -->
-    <div id="about_app">
+    <section id="about_app">
         <div class="container">
-            <div class="about">
+            <div class="wrapper">
                 <div class="row">
                     <div class="col-md-6 text-center">
                         <img class="about-img" src="/images/fast_message.png" alt="fast message">
@@ -101,9 +101,125 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Feature -->
+    <section id="features">
+        <div class="container">
+            <div class="wrapper">
+                <div class="text-center">
+                    <h3>App Features</h3>
+                    <p>These are some of the features we provide Because more features leads more efficiency.</p>
+                </div>
+                <div class="features_all my-5">
+                    <div class="row">
+                        <div class="col-lg-6 form-group">
+                            <div class="feature">
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="feature_image_box">
+                                            <img src="/images/icons/design.png " class="rounded m-auto w-50" alt="Design Image">
+                                        </div>
+                                    </div>
+                                    <div class="col-9 m-auto">
+                                        <div class="feature_text">
+                                            <h5>Clean Design</h5>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 form-group">
+                            <div class="feature">
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="feature_image_box">
+                                            <img src="/images/icons/boot.png " class="rounded m-auto w-50" alt="Design Image">
+                                        </div>
+                                    </div>
+                                    <div class="col-9 m-auto">
+                                        <div class="feature_text">
+                                            <h5>Fast Boot</h5>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 form-group">
+                            <div class="feature">
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="feature_image_box">
+                                            <img src="/images/icons/responsive.png " class="rounded m-auto w-50" alt="Design Image">
+                                        </div>
+                                    </div>
+                                    <div class="col-9 m-auto">
+                                        <div class="feature_text">
+                                            <h5>Responsive Design</h5>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 form-group">
+                            <div class="feature">
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="feature_image_box">
+                                            <img src="/images/icons/analysis.png " class="rounded m-auto w-50" alt="Design Image">
+                                        </div>
+                                    </div>
+                                    <div class="col-9 m-auto">
+                                        <div class="feature_text">
+                                            <h5>Analysis Design</h5>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 form-group">
+                            <div class="feature">
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="feature_image_box">
+                                            <img src="/images/icons/chat.png " class="rounded m-auto w-50" alt="Design Image">
+                                        </div>
+                                    </div>
+                                    <div class="col-9 m-auto">
+                                        <div class="feature_text">
+                                            <h5>Chatting Service</h5>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 form-group">
+                            <div class="feature">
+                                <div class="row">
+                                    <div class="col-3">
+                                        <div class="feature_image_box">
+                                            <img src="/images/icons/support.png " class="rounded m-auto w-50" alt="Design Image">
+                                        </div>
+                                    </div>
+                                    <div class="col-9 m-auto">
+                                        <div class="feature_text">
+                                            <h5>Free Support</h5>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- scripts bootsrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
