--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         <!-- joumbotron -->
         <div class="jumbotron jumbotron-fluid vertical-center">
             <div class="container">
-                <div class="c_shrink">
+                <div class="wrapper">
                     <div class="row text-md-left text-sm-center">
                         <!-- text -->
                         <div class="col-lg-6 col-md-6 m-auto">
@@ -86,7 +86,8 @@
                     <div class="col-md-6 m-auto about_text">
                         <h3>Easy Messaging</h3>
                         <p>Created and design by the exprets to make your user expreience much better. use our message
-                            app to commincate with others without wories. we are here to make UI better.</p>
+                            app
+                            to commincate with others without wories. we are here to make UI better.</p>
                     </div>
                 </div>
                 <div class="row pt-5">
@@ -109,22 +110,25 @@
             <div class="wrapper">
                 <div class="text-center">
                     <h3>App Features</h3>
-                    <p>These are some of the features we provide Because more features leads more efficiency.</p>
+                    <p class="feature_main_para">These are some of the features we provide Because more features leads
+                        more efficiency.</p>
+                    <p class="d-sm-none">More features leads More efficiency.</p>
                 </div>
-                <div class="features_all my-5">
+                <div class="features_all mt-5">
                     <div class="row">
                         <div class="col-lg-6 form-group">
                             <div class="feature">
                                 <div class="row">
-                                    <div class="col-3">
+                                    <div class="col-md-3 col-5">
                                         <div class="feature_image_box">
                                             <img src="/images/icons/design.png " class="rounded m-auto w-50" alt="Design Image">
                                         </div>
                                     </div>
-                                    <div class="col-9 m-auto">
+                                    <div class="col-md-9 col-7 m-auto">
                                         <div class="feature_text">
                                             <h5>Clean Design</h5>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
+                                                quos?</p>
                                         </div>
                                     </div>
                                 </div>
@@ -133,15 +137,16 @@
                         <div class="col-lg-6 form-group">
                             <div class="feature">
                                 <div class="row">
-                                    <div class="col-3">
+                                    <div class="col-md-3 col-5">
                                         <div class="feature_image_box">
                                             <img src="/images/icons/boot.png " class="rounded m-auto w-50" alt="Design Image">
                                         </div>
                                     </div>
-                                    <div class="col-9 m-auto">
+                                    <div class="col-md-9 col-7 m-auto">
                                         <div class="feature_text">
                                             <h5>Fast Boot</h5>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
+                                                quos?</p>
                                         </div>
                                     </div>
                                 </div>
@@ -150,15 +155,16 @@
                         <div class="col-lg-6 form-group">
                             <div class="feature">
                                 <div class="row">
-                                    <div class="col-3">
+                                    <div class="col-md-3 col-5">
                                         <div class="feature_image_box">
                                             <img src="/images/icons/responsive.png " class="rounded m-auto w-50" alt="Design Image">
                                         </div>
                                     </div>
-                                    <div class="col-9 m-auto">
+                                    <div class="col-md-9 col-7 m-auto">
                                         <div class="feature_text">
                                             <h5>Responsive Design</h5>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
+                                                quos?</p>
                                         </div>
                                     </div>
                                 </div>
@@ -167,15 +173,16 @@
                         <div class="col-lg-6 form-group">
                             <div class="feature">
                                 <div class="row">
-                                    <div class="col-3">
+                                    <div class="col-md-3 col-5">
                                         <div class="feature_image_box">
                                             <img src="/images/icons/analysis.png " class="rounded m-auto w-50" alt="Design Image">
                                         </div>
                                     </div>
-                                    <div class="col-9 m-auto">
+                                    <div class="col-md-9 col-7 m-auto">
                                         <div class="feature_text">
                                             <h5>Analysis Design</h5>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
+                                                quos?</p>
                                         </div>
                                     </div>
                                 </div>
@@ -184,32 +191,34 @@
                         <div class="col-lg-6 form-group">
                             <div class="feature">
                                 <div class="row">
-                                    <div class="col-3">
+                                    <div class="col-md-3 col-5">
                                         <div class="feature_image_box">
                                             <img src="/images/icons/chat.png " class="rounded m-auto w-50" alt="Design Image">
                                         </div>
                                     </div>
-                                    <div class="col-9 m-auto">
+                                    <div class="col-md-9 col-7 m-auto">
                                         <div class="feature_text">
                                             <h5>Chatting Service</h5>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
+                                                quos?</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 form-group">
-                            <div class="feature">
+                            <div class="feature mb-0">
                                 <div class="row">
-                                    <div class="col-3">
+                                    <div class="col-md-3 col-5">
                                         <div class="feature_image_box">
                                             <img src="/images/icons/support.png " class="rounded m-auto w-50" alt="Design Image">
                                         </div>
                                     </div>
-                                    <div class="col-9 m-auto">
+                                    <div class="col-md-9 col-7 m-auto">
                                         <div class="feature_text">
                                             <h5>Free Support</h5>
-                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quos?</p>
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
+                                                quos?</p>
                                         </div>
                                     </div>
                                 </div>
@@ -220,6 +229,8 @@
             </div>
         </div>
     </section>
+
+    <!--  -->
 
     <!-- scripts bootsrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
