added get started section

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <!-- header -->
+    <!-- Header -->
     <section class="header">
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -39,7 +39,7 @@
         <!-- joumbotron -->
         <div class="jumbotron jumbotron-fluid vertical-center">
             <div class="container">
-                <div class="wrapper">
+                <div class="wrapper mx-lg-5">
                     <div class="row text-md-left text-sm-center">
                         <!-- text -->
                         <div class="col-lg-6 col-md-6 m-auto">
@@ -52,18 +52,16 @@
                             data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img id="bannerImage" src="/images/carousel1.png" alt="First slide">
+                                    <img class="bannerImage" src="/images/carousel1.png" alt="First slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img id="bannerImage" src="/images/carousel2.png" alt="Second slide">
+                                    <img class="bannerImage" src="/images/carousel2.png" alt="Second slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img id="bannerImage" src="/images/carousel3.png" alt="Third slide">
+                                    <img class="bannerImage" src="/images/carousel3.png" alt="Third slide">
                                 </div>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
@@ -78,8 +76,8 @@
     <!-- About -->
     <section id="about_app">
         <div class="container">
-            <div class="wrapper">
-                <div class="row">
+            <div class="wrapper mx-lg-5">
+                <div class="row  mx-lg-5">
                     <div class="col-md-6 text-center">
                         <img class="about-img" src="/images/fast_message.png" alt="fast message">
                     </div>
@@ -90,7 +88,7 @@
                             to commincate with others without wories. we are here to make UI better.</p>
                     </div>
                 </div>
-                <div class="row pt-5">
+                <div class="row pt-5 mx-lg-5">
                     <div class="col-md-6 m-auto about_text">
                         <h3>Fast Loading</h3>
                         <p>Feel the Lightning speed. Message worldwide with the highest speed protocol. we know the
@@ -107,7 +105,7 @@
     <!-- Feature -->
     <section id="features">
         <div class="container">
-            <div class="wrapper">
+            <div class="wrapper mx-lg-5">
                 <div class="text-center">
                     <h3>App Features</h3>
                     <p class="feature_main_para">These are some of the features we provide Because more features leads
@@ -125,7 +123,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-9 col-7 m-auto">
-                                        <div class="feature_text">
+                                        <div class="info_text">
                                             <h5>Clean Design</h5>
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
                                                 quos?</p>
@@ -143,7 +141,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-9 col-7 m-auto">
-                                        <div class="feature_text">
+                                        <div class="info_text">
                                             <h5>Fast Boot</h5>
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
                                                 quos?</p>
@@ -161,7 +159,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-9 col-7 m-auto">
-                                        <div class="feature_text">
+                                        <div class="info_text">
                                             <h5>Responsive Design</h5>
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
                                                 quos?</p>
@@ -179,7 +177,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-9 col-7 m-auto">
-                                        <div class="feature_text">
+                                        <div class="info_text">
                                             <h5>Analysis Design</h5>
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
                                                 quos?</p>
@@ -197,7 +195,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-9 col-7 m-auto">
-                                        <div class="feature_text">
+                                        <div class="info_text">
                                             <h5>Chatting Service</h5>
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
                                                 quos?</p>
@@ -215,7 +213,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-9 col-7 m-auto">
-                                        <div class="feature_text">
+                                        <div class="info_text">
                                             <h5>Free Support</h5>
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
                                                 quos?</p>
@@ -230,7 +228,43 @@
         </div>
     </section>
 
-    <!--  -->
+    <!-- Use -->
+    <section id="use">
+        <div class="container">
+            <div class="wrapper mx-lg-5">
+                <div class="text-center">
+                    <h3>Get Started !</h3>
+                    <p class="section_main_para">Get started with in a minute, new to us? follow these simple path.</p>
+                    <p class="d-sm-none">Get started with in a minute.</p>
+                </div>
+                <div class="row pt-3 mx-lg-5">
+                    <ul class="col-md-6 m-auto about_text">
+                        <li>
+                            <div class="info_text form-group">
+                                <h5>Create an account</h5>
+                                <p>Login if you are already a member else Register to us.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="info_text form-group">
+                                <h5>Verify</h5>
+                                <p>Verify your account from the link we have sent you through mail.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="info_text form-group mb-5">
+                                <h5>Use it</h5>
+                                <p>You are loged in, open chat and enjoy.</p>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="col-md-6 text-center">
+                        <img class="about-img bannerImage" src="/images/four.png" alt="Use Image">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- scripts bootsrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
