added get started and fixed banner

--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
                     <div class="row text-md-left text-sm-center">
                         <!-- text -->
                         <div class="col-lg-6 col-md-6 m-auto">
-                            <h2 class="d-md-block d-sm-none hide-xs">Best Social App</h2>
+                            <h2 class="text-center">Meet Social App</h2>
                             <p class="lead d-md-block d-sm-none hide-xs">Meet, Talk, Chat with your all friends here.</p>
-                            <a class="nav-item nav-link user_btn w-50 middle-xs" href="#">Register</a>
+                            <a class="nav-item nav-link user_btn w-50 register" href="#">Register</a>
                         </div>
                         <!-- carousel -->
                         <div id="main_carousel" class="col-lg-6 col-md-6 img_container carousel slide" data-interval="2500"
@@ -62,6 +62,10 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- mobile -->
+                        <div class="col-lg-6 col-md-6 m-auto" style="z-index: 2;">
+                            <a class="nav-item nav-link user_btn w-50 middle_xs d-none" href="#">Register</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -77,25 +81,27 @@
     <section id="about_app">
         <div class="container">
             <div class="wrapper mx-lg-5">
-                <div class="row  mx-lg-5">
+                <div class="row  mx-lg-5 line_bottom">
                     <div class="col-md-6 text-center">
                         <img class="about-img" src="/images/fast_message.png" alt="fast message">
                     </div>
                     <div class="col-md-6 m-auto about_text">
                         <h3>Easy Messaging</h3>
                         <p>Created and design by the exprets to make your user expreience much better. use our message
-                            app
-                            to commincate with others without wories. we are here to make UI better.</p>
+                            app to commincate with others without wories. we are here to make UI better.</p>
                     </div>
                 </div>
                 <div class="row pt-5 mx-lg-5">
                     <div class="col-md-6 m-auto about_text">
-                        <h3>Fast Loading</h3>
+                        <h3 class="register">Fast Loading</h3>
                         <p>Feel the Lightning speed. Message worldwide with the highest speed protocol. we know the
                             value of time and thats why users dont need to wait for anything.</p>
                     </div>
                     <div class="col-md-6 text-center">
                         <img class="about-img" src="/images/fast_loading.png" alt="fast message">
+                    </div>
+                    <div class="col-md-6 m-auto about_text d-none middle_xs">
+                        <h3>Fast Loading</h3>
                     </div>
                 </div>
             </div>
@@ -260,6 +266,27 @@
                     </ul>
                     <div class="col-md-6 text-center">
                         <img class="about-img bannerImage" src="/images/four.png" alt="Use Image">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- get started -->
+    <section id="get_started">
+        <div class="container">
+            <div class="wrapper">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="text-center">
+                            <h3>Try 30 Days Free Trail</h3>
+                            <p>No credit card required.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 vertical-center">
+                        <div class="m-auto">
+                            <button type="button" class="btn btn-primary px-5 py-3">Get Started</button>
+                        </div>
                     </div>
                 </div>
             </div>
