--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                         <li><a class="nav-item nav-link" href="#">Feature</a></li>
                         <li><a class="nav-item nav-link" href="#">Pricing</a></li>
                         <li><a class="nav-item nav-link" href="#">Pages</a></li>
-                        <li><a class="nav-item nav-link user_btn" href="#">Login</a></li>
+                        <li><a class="nav-item user_btn" href="#">Login</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,9 +43,9 @@
                     <div class="row text-md-left text-sm-center">
                         <!-- text -->
                         <div class="col-lg-6 col-md-6 m-auto">
-                            <h2 class="text-center">Meet Social App</h2>
+                            <h2 class="text-md-left text-center">Meet Social App</h2>
                             <p class="lead d-md-block d-sm-none hide-xs">Meet, Talk, Chat with your all friends here.</p>
-                            <a class="nav-item nav-link user_btn w-50 register" href="#">Register</a>
+                            <a class="nav-item user_btn w-50 register" href="#">Register</a>
                         </div>
                         <!-- carousel -->
                         <div id="main_carousel" class="col-lg-6 col-md-6 img_container carousel slide" data-interval="2500"
@@ -64,7 +64,7 @@
                         </div>
                         <!-- mobile -->
                         <div class="col-lg-6 col-md-6 m-auto" style="z-index: 2;">
-                            <a class="nav-item nav-link user_btn w-50 middle_xs d-none" href="#">Register</a>
+                            <a class="nav-itemk user_btn w-50 middle_xs d-none" href="#">Register</a>
                         </div>
                     </div>
                 </div>
@@ -279,7 +279,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="text-center">
-                            <h3>Try 30 Days Free Trail</h3>
+                            <h4>Try 30 Days Free Trail</h4>
                             <p>No credit card required.</p>
                         </div>
                     </div>
@@ -291,6 +291,73 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- fotter -->
+    <section id="fotter">
+        <div class="container">
+            <div class="wrapper pb-2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="info_text form-group">
+                            <h4 class="text-primary">FriendsBook</h4>
+                            <p class="w-75">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+                                ratione dolores id nesciunt culpa sapiente similique totam quaerat, fugiat ex eos
+                                repellat delectus?</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row">
+                                <div class="col-sm-4 col-6">
+                                        <h6>Company</h6>
+                                        <ul>
+                                            <li>About us</li>
+                                            <li>Press</li>
+                                            <li>Review</li>
+                                            <li>Partners</li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-sm-4 col-6">
+                                        <h6>Blog</h6>
+                                        <ul>
+                                            <li>Finance</li>
+                                            <li>Technology</li>
+                                            <li>Mobile</li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-sm-4 col-6">
+                                        <h6>Integrations</h6>
+                                        <ul>
+                                            <li>Android App</li>
+                                            <li>IOS App</li>
+                                            <li>Windows App</li>
+                                            <li>Ubuntu</li>
+                                        </ul>
+                                    </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="fotter_bottom">
+        <div class="container">
+            <div class="fotter_bottom">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="mb-0">&copy; 2018 Copyright, All Rights Reserved by FirendsBook
+                        </p>
+                    </div>
+                    <div class="col-sm-6">
+                        <ul class="mb-0">
+                            <li>Terms & Condition</li>
+                            <li>Privacy Policy</li>
+                            <li>Help</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
     </section>
 
     <!-- scripts bootsrap -->
