--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a class="navbar-brand" href="#">FriendsBook</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -308,32 +308,32 @@
                     </div>
                     <div class="col-md-6">
                         <div class="row">
-                                <div class="col-sm-4 col-6">
-                                        <h6>Company</h6>
-                                        <ul>
-                                            <li>About us</li>
-                                            <li>Press</li>
-                                            <li>Review</li>
-                                            <li>Partners</li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-sm-4 col-6">
-                                        <h6>Blog</h6>
-                                        <ul>
-                                            <li>Finance</li>
-                                            <li>Technology</li>
-                                            <li>Mobile</li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-sm-4 col-6">
-                                        <h6>Integrations</h6>
-                                        <ul>
-                                            <li>Android App</li>
-                                            <li>IOS App</li>
-                                            <li>Windows App</li>
-                                            <li>Ubuntu</li>
-                                        </ul>
-                                    </div>
+                            <div class="col-sm-4 col-6">
+                                <h6>Company</h6>
+                                <ul>
+                                    <li>About us</li>
+                                    <li>Press</li>
+                                    <li>Review</li>
+                                    <li>Partners</li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-4 col-6">
+                                <h6>Blog</h6>
+                                <ul>
+                                    <li>Finance</li>
+                                    <li>Technology</li>
+                                    <li>Mobile</li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-4 col-6">
+                                <h6>Integrations</h6>
+                                <ul>
+                                    <li>Android App</li>
+                                    <li>IOS App</li>
+                                    <li>Windows App</li>
+                                    <li>Ubuntu</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -345,13 +345,13 @@
         <div class="container">
             <div class="fotter_bottom">
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-lg-6 col-sm-12 text-center">
                         <p class="mb-0">&copy; 2018 Copyright, All Rights Reserved by FirendsBook
                         </p>
                     </div>
-                    <div class="col-sm-6">
-                        <ul class="mb-0">
-                            <li>Terms & Condition</li>
+                    <div class="col-lg-6 col-sm-12 text-center d-sm-block d-none">
+                        <ul class="mb-0 pl-0">
+                            <li class="pl-0">Terms & Condition</li>
                             <li>Privacy Policy</li>
                             <li>Help</li>
                         </ul>
