--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,14 @@
 </head>
 
 <body>
+
+    <!-- loader -->
+    
+    <div class="loader_container fixed-top">
+            <p>FriendsBook</p>
+            <div class="loader"></div>
+            <p>Loading . . .</p>
+    </div>
     <!-- Header -->
     <section class="header">
         <!-- navbar -->
